# aerie-liff

./: .gitignore  README.md
src/: CHANGES  CMakeLists.txt  INSTALL.rst  LICENSE.Auger  LICENSE.HAWC
src/astro-service/: CMakeLists.txt
src/astro-service/docs/: index.rst
src/astro-service/docs/doxygen/: group.dox
src/astro-service/examples/: drawBField.cc  moonsight.cc  source-sight.cc
src/astro-service/include/astro-service/: AstroService.h  GeoDipoleService.h  GeomagneticField.h  Geopack-2008.h  IGRFService.h  Moon.h  Nutation.h  Precession.h  StdAstroService.h  Sun.h  Util.h
src/astro-service/include/astro-service/catalogs/: CatalogQuery.h
src/astro-service/src/: GeoDipoleService.cc  Geopack-2008.f  IGRFService.cc  Moon.cc  Nutation.cc  Precession.cc  StdAstroService.cc  Sun.cc  Util.cc
src/astro-service/src/catalogs/: CatalogQuery.cc  base64.cpp  cJSON.c
src/astro-service/src/pybindings/: AstroService.cc  Submodule.cc
src/astro-service/src/test/: AerieVsIceCube.cc  testEqu2Gal.py  testEqu2Loc.py  testLoc2Equ.py  testLunar.py  test_astro_service_main.cc
src/cmake/: ProjectMacros.cmake  hawc-config.in  toplevel.cmake
src/cmake/PostInstall/: CMakeLists.txt  pycompile.cmake
src/cmake/Utility/: CMakeLanguageWorks.cmake  CMakeRepositoryRevision.cmake  Utility.cmake
src/cmake/resources/: CMakeLists.txt  ape.rst  cmake_build.rst  index.rst  unit_tests.rst
src/data-structures/: CMakeLists.txt~
src/data-structures/docs/: astronomy.rst  detector.rst  event.rst  geometry.rst  hardware.rst  index.rst  iterator.rst  math.rst  physics.rst  reconstruction.rst  time.rst
src/docs/doxygen/: about_aerie.dox  build.dox  coding_conventions.dox  doxyfile.in  format_conventions.dox  group.dox  index.dox.in  install.dox  project.dox  run_aerie.dox  standards.dox  tutorial.dox  tutorial_effective_area.dox  tutorial_logging.dox  tutorial_map_making.dox  tutorial_modules_sources.dox  tutorial_python.dox  tutorial_reconstructing_simulation.dox  tutorial_root_output.dox  tutorial_sensitivity.dox  tutorial_service_lister.dox  (+7 more)
src/grmodel-services/: CMakeLists.txt
src/hawcnest/: CMakeLists.txt
src/hawcnest/config/: HAWCSchemaTypes.xsd  hawcnest-config.xsd
src/hawcnest/docs/: bag.rst  classes.rst  cmdline.rst  index.rst  logging.rst  loops.rst  modules.rst  services.rst  units.rst
src/hawcnest/docs/doxygen/: group.dox
src/hawcnest/include/hawcnest/: CommandLineConfigurator-inl.h  CommandLineConfigurator.h  Configuration.h  ConfigurationUtil.h  HAWCNest.h  HAWCUnits.h  Lexer.h  LoadProject.h  Logging.h  NestIniConfig.h  NestXMLConfig.h  Parser.h  PointerTypedefs.h  RegisterService.h  Service.h  SoftwareVersion.h  config.h.in
src/hawcnest/include/hawcnest/impl/: ANSIColorCode.h  Dump.h  Has.h  SafeBoolCast.h  ServiceImpl.h  ServiceRegistry.h  conversion_allowed.h  is_shared_ptr.h  name_of.h  pybindings.h  unit_defs.h
src/hawcnest/include/hawcnest/processing/: Bag-inl.h  Bag.h  BaggableSharedPtr.h  BaggableVector.h  EfficientModule.h  EfficientModuleImpl.h  EfficientModuleSequentialMainLoop.h  MainLoop.h  Module.h  MultiSource.h  PythonModule.h  PythonSource.h  SequentialMainLoop.h  SignpostModule.h  SingleEventMainLoop.h  Source.h  TwoForkMainLoop.h  WhileLoop.h
src/hawcnest/include/hawcnest/test/: OutputConfig.h  Test.h  UnitTestFormatter.h
src/hawcnest/include/hawcnest/xml/: XMLBranch.h  XMLErrorHandler.h  XMLReader.h
src/hawcnest/python/: HAWCNest.py  parse_hawcnest_xml.py
src/hawcnest/src/: ANSIColorCode.cc  Bag.cc  CommandLineConfigurator.cc  Configuration.cc  ConfigurationUtil.cc  Dump.cc  EfficientModuleSequentialMainLoop.cc  HAWCNest.cc  HAWCUnits.cc  Lexer.cc  LoadProject.cc  Logging.cc  MultiSource.cc  NestIniConfig.cc  NestXMLConfig.cc  Parser.cc  PythonModule.cc  PythonSource.cc  SequentialMainLoop.cc  ServiceRegistry.cc  SingleEventMainLoop.cc  TwoForkMainLoop.cc  UnitTestFormatter.cc  WhileLoop.cc
src/hawcnest/src/pybindings/: Bag.cc  Configuration.cc  HAWCNest.cc  HAWCUnits.cc  Logging.cc  MainLoop.cc  Module.cc  SoftwareVersion.cc  Source.cc  Submodule.cc  __init__.py  load_pybindings.py
src/hawcnest/src/test/: BagTest.cc  CommandLine.cc  ConfigurationTest.cc  NestTest.cc  ServiceRegistryTest.cc  SystemOfUnitsTest.cc  testFunctions.py  testSubclassing.py  test_hawcnest_main.cc
src/hawcnest/src/xml/: XMLBranch.cc  XMLErrorHandler.cc  XMLReader.cc
src/liff/: CMakeLists.txt  README
src/liff/docs/: index.rst
src/liff/examples/: .Test_makeModel.cc.swp  HealpixSigFluxMap.cc
src/liff/examples/3ml/: README
src/liff/examples/3ml/tested/: README  fitMorphology.py  fitPoint.py  testCrab3ML.py
src/liff/include/liff/: BinDefinitions.h  BinList.h  CalcBin.h  CommandLineOptions.h  DetectorResponse.h  ExtendedSourceDetectorResponse.h  Func1.h  InternalModel.h  InternalModelBin.h  LikeHAWC.h  LogLogSpectrum.h  Minimize.h  ModelInterface.h  MultiSource.h  MultiTF1PointSource.h  PointSourceDetectorResponse.h  ROI.h  ResponseBin.h  SkyMapCollection.h  TF1ExtendedSource.h  TF1PointSource.h  Util.h
src/liff/include/liff/skymaps/: MapTree.h  SkyMap.h
src/liff/scripts/: .gitignore  MapPalette.py  plotMercator.py
src/liff/src/: BinDefinitions.cc  BinList.cc  CalcBin.cc  DetectorResponse.cc  ExtendedSourceDetectorResponse.cc  InternalModel.cc  InternalModelBin.cc  LikeHAWC.cc  Minimize.cc  MultiSource.cc  MultiTF1PointSource.cc  PointSourceDetectorResponse.cc  ROI.cc  SkyMapCollection.cc  TF1ExtendedSource.cc  TF1PointSource.cc  Util.cc
src/liff/src/pybindings/: 3ML_hawc.cc  ElectronIC.py  LikeHAWC.cc  Submodule.cc  Submodule_3ML.cc  __init__.py
src/liff/src/skymaps/: SkyMap.cc
src/liff/src/test/: TestSpectrumFitPointSource.cc  test_liff_main.cc
src/rng-service/: CMakeLists.txt
(+367 files in other folders)
